--- a/01. Tổng quan về Prometheus.md
+++ b/01. Tổng quan về Prometheus.md
@@ -12,7 +12,7 @@
 
 * [4. Kiến trúc](#4)
 
-* [tk. Tham khảo](#tk)
+* [Tham khảo](#tk)
 
 --- 
 
@@ -71,7 +71,7 @@ Long-lived jobs/Exporter: Là những job sẽ tồn tại lâu dài. Các Expor
 - Prometheus là đáng tin cậy. Bạn có thể xem thống kê nào có sẵn về hệ thống của bạn, ngay cả trong điều kiện lỗi. Nếu bạn cần độ chính xác 100%, ví dụ cho mục đích thanh toán, Prometheus không phải là một lựa chọn tốt vì nó không chi tiết và đầy đủ.
 
 <a name = 'tk'></a>
-## tk. Tham khảo 
+## Tham khảo 
 
 [1] - https://github.com/quangln94/Prometheus/blob/main/docx/01.Prometheus.md
 
