--- a/02. Các thành phần của Prometheus.md
+++ b/02. Các thành phần của Prometheus.md
@@ -1,1 +1,59 @@
 # Các thành phần của Prometheus
+- Hệ sinh thái Prometheus được tạo nên từ nhiều phần độc lập, một số là tùy chọn:
+    - Prometheus-Server
+    - Exporters
+    - Push-Gateway
+    - AlertManager
+    - Một số công cụ hỗ trợ khác
+## 1. Prometheus-Server
+
+![1](/image/2021-04-27_15-11-48.png)
+
+- Bao gồm 3 phần chính:    
+    - Retrieval: thu thập thông tin từ các nguồn cần giám sát như phần mềm, dịch vụ, máy chủ, ...
+    - Time-Series DataBase: là một chuỗi các điểm dữ liệu, thường bao gồm các phép đo liên tiếp được thực hiện từ cùng một nguồn trong một khoảng thời gian. Nơi này cũng lưu trữ dữ liệu theo chuỗi thời gian. 
+    - HTTP server: cung cấp API hỗ trợ truy vấn dữ liệu. Dữ liệu thời gian được thu thập qua giao thức HTTP
+- Quét và lưu trữ dữ liệu theo chuỗi thời gian.
+
+## 2. Exporters
+- Là một loại hình dịch vụ (Services) có khả năng thu thập các chỉ số từ đối tượng cần giám sát, sau đó chuyển thành định dạng mà Prometheus có thể hiểu. Exporters cũng cung cấp 1 địa chỉ Endpoint đúng theo yêu cầu mà Prometheus cần, dùng để pull dữ liệu.
+- Cung cấp 1 API cho Prometheus server pull dữ liệu.
+- Một số exporters: 
+    - Cơ sở dữ liệu (MongoDB, MySQL, PostgreSQL, ...)
+    - Phần cứng (NVDIA GPU, Fortigate, Netgear Router, IoT Edison, ...)
+    - Lữu trữ (Hadoop, ScaleIO, Gluster, ... )
+    - Web Server (Apache, Nginx, HAProxy, ...)
+    - Hệ thống Cloud (AWS, Cloudflare, ...)
+
+## 3. Push-Gateway
+- Cung cấp khả năng đẩy dữ liệu nhằm hỗ trợ cho các loại công việc ngắn hạn, không tồn tại lâu.
+- Pushgateway sẽ đóng vai trò trung gian giữa promethes server và targets cần monitor. Lúc này, metrics sẽ được phơi bay ở pushgateway, chứ không pải là ở targets nữa.
+- Pushgateway sẽ không lưu trữ metrics lâu dài. Nó chỉ lưu trữ tạm thời mà thôi. Khi metrics có values mới, nó sẽ thay thế values cũ.
+- Hỗ trợ giám sát các phần mềm/dịch vụ mà không có sẵn `Exporter`
+- Prometheus cung cấp bộ thư viện được viết bằng nhiều ngôn ngữ lập trình như: GO, Java/Scala, Python, Ruby được hỗ trợ chính thức, ngoài ra vẫn có các thư viện được viết bằng ngôn ngữ khác như C++, C#, Node.JS, PHP, Lua, R,...
+
+## 4. AlertManager
+- Prometheus có 1 thành phần gọi là AlertManager phụ trách công việc quản lý các thông báo, phát ra cảnh báo khi hệ thống gặp sự cố.
+- Thành phần này cũng bao gồm nhiệm vụ loại bỏ thông báo trùng lặp, phân nhóm, và thông báo đến các kênh truyền thông thích hợp như email, slack, PagerDuty ...
+
+## 5. Các công cụ khác
+
+#### 5.1 PromQL
+- Prometheus cung cấp một ngôn ngữ truy vấn gọi là PromQL, cho phép người dùng chọn lọc và tổng hợp dữ liệu chuỗi thời gian trong thời gian thực.
+- Chúng ta có thể trực tiếp truy vấn thông qua API hoặc dùng một số công cụ mạnh mẽ có thể biểu diễn dữ liệu dưới dạng biểu đồ, hình ảnh trực quan hơn như là Grafana.
+
+#### 5.2 Pull và Push
+- Như đề cập ở trên, Prometheus sử dụng cơ chế “kéo” (pull) để thu thập dữ liệu từ các đối tượng cần giám sát.
+- Đặc điểm này rất quan trọng trong kiến trúc của Prometheus.
+- Mặc dù với cơ chế “đẩy” tạo ra sự chủ động trong quá trình cập nhật dữ liệu, nhưng vẫn có một số hạn chế sau:
+- Khi hệ thống cần giám sát bao gồm hàng trăm hoặc hơn microservices cùng hoạt động. 
+    - Mỗi microservice cần đẩy dữ liệu về trung tâm giám sát tạo nên sự quá tải về đường truyền dẫn đến tình trạng thắt cổ chai. Đặt ra nhu cầu phải đầu tư lớn về hạ tầng, cũng như ảnh hưởng hạ tầng mạng.
+    - Ngoài ra, mô hình này đòi hỏi cần phải có 1 chương trình chạy nền trên từng máy chủ liên tục đẩy dữ liệu về trung tâm.
+- Ngược lại, Prometheus chỉ cần biết địa chỉ endpoint và chủ động kéo dữ liệu từ 1 hoặc nhiều Prometheus instances.
+- Mặt khác, có những trường hợp mà chúng ta không thể dùng cơ chế kéo, ví dụ như đối với batch job, schedule job có vòng đời ngắn, không tồn tại lâu. Prometheus cũng cung cấp Push Gateway hỗ trợ cho các đối tượng này đẩy dữ liệu chủ động.
+
+#### 5.3 Cơ chế `service discovery`
+- Cơ chế này giúp Prometheus biết đối tượng nào cần giám sát, khi nào cần thu thập dữ liệu, quy định luật lệ. 
+- Prometheus pull dữ liệu từ các đối tượng cần giám sát thông qua giao thức HTTP với các điều kiện như sau
+    - Có địa chỉ `endpoint`. 
+    - Dữ liệu theo đúng format mà Prometheus có thể hiểu. 
