--- a/02. Các thành phần của Prometheus.md
+++ b/02. Các thành phần của Prometheus.md
@@ -25,6 +25,8 @@
     - Web Server (Apache, Nginx, HAProxy, ...)
     - Hệ thống Cloud (AWS, Cloudflare, ...)
 
+![2](/image/2021-04-26_14-27-32.png)
+
 ## 3. Push-Gateway
 - Cung cấp khả năng đẩy dữ liệu nhằm hỗ trợ cho các loại công việc ngắn hạn, không tồn tại lâu.
 - Pushgateway sẽ đóng vai trò trung gian giữa promethes server và targets cần monitor. Lúc này, metrics sẽ được phơi bay ở pushgateway, chứ không pải là ở targets nữa.
@@ -57,3 +59,10 @@
 - Prometheus pull dữ liệu từ các đối tượng cần giám sát thông qua giao thức HTTP với các điều kiện như sau
     - Có địa chỉ `endpoint`. 
     - Dữ liệu theo đúng format mà Prometheus có thể hiểu. 
+
+
+## 6. Tham khảo 
+1. https://prometheus.io/docs/introduction/overview/
+2. https://cuongquach.com/prometheus-la-gi-tong-quan-prometheus.html
+3. https://github.com/longsube/Tim-hieu-Prometheus/tree/master/docs
+4. https://iamhadoan.blogspot.com/2020/12/prometheus-co-ban.html
