--- a/03. Giới thiệu.md
+++ b/03. Giới thiệu.md
@@ -1,1 +1,82 @@
 # Giới thiệu
+- Monitoring là công cụ giám sát và quá trình thu thập các số liệu và quản lí hệ thống công nghệ. 
+- Ngoài ra, *monitoring* làm được nhiều việc hơn. Nó cung cấp các thông số về kinh doanh từ các nguồn lưu lượng thông tin thu được bởi hệ thống và ứng dụng. 
+- Các thông số này thu được dựa trên kinh nghiệm của người dùng và phục vụ cho công việc kinh doanh. 
+## 1. Nguyên tắc của hệ thống giám sát
+
+![1](/image/2021-05-04_13-32-43.png)
+
+- Một mô hình tuyệt vời của nền tảng này là dịch vụ *Google* được đề cập thông qua biểu đồ cấp bậc như trên. 
+- Giám sát giúp doanh nghiệp xây dựng và triển khai các dịch vụ 
+- Nếu không có dữ liệu từ việc giám sát, ta sẽ không có cái nhìn về thế giới, khả năng xử lí các vấn đề, lên kế hoạch, hoặc không cung cấp các thông tin tới doanh nghiệp để xem trạng thái và tính giá thành. 
+- Chính vì những tác dụng này nên việc cấu hình một công cụ giám sát theo đúng nhu cầu không phải là một việc dễ dàng.
+
+## 2. Giám sát thủ công 
+- Có rất nhiều cách để giám sát. Trong đó, bạn có thể chỉ rõ mọi thứ bằng cách kiểm tra từng phần và lên danh sách vào mẫu giám sát. 
+- Có 2 phương pháp giám sát chính là: thăm dò và tự quan sát. Một ví dụ của việc thăm dò là thực hiện quảng bá bản tin ICMP, xác thực trong quá trình truyền đi của các gói dữ liệu trên mạng.
+- Tự quan sát sẽ theo dõi các thông số của ứng dụng. Dữ liệu được biểu diễn chính xác và được phát ra dưới dạng events, logs, metric.
+- Cơ chế Pull và Push
+    - Có 2 cách mà giám sát dùng để kiểm tra, thực thi đánh giá tóm tắt. 
+    - Pull dựa trên hệ thống cào dữ liệu hoặc kiểm tra ứng dụng từ xa. 
+    - Push dựa trên việc phát ra những events mà nó nhận được từ giám sát. 
+- Cả 2 cái này đều có ưu và nhược điểm. 
+- Prometheus sử dụng cơ chế pull, hỗ trợ việc nhận events và đẩy tới gateway. 
+- Có 2 kiểu dữ liệu giám sát: *Metrics* và *Logs*
+    - Metrics: Phần lớn các công cụ giám sát hiện nay dựa vào độ nặng của metrics để giúp chúng hiểu thứ trong chính môi trường của mình. Metrics được lưu trữ với kiểu dữ liệu thời gian được ghi lại khi đo trên ứng dụng. 
+    - Logs: Thường được lưu dưới dang văn bản và được phát ra bởi ứng dụng. Logs giúp ta cho biết được ứng dụng đang làm những công việc gì, nó hữu dụng trong việc phát hiện lỗi sai và truy cứu. 
+
+## 3. Metrics
+- Metrics luôn là phần đơn giản nhất của kiến trúc giám sát. 
+- Mục tiêu của metrics là xác định lỗi, xác định khi hệ thống nhận được kết quả đặc biệt hoặc lỗi xảy ra. 
+- Metrics là kết quả đo được các thành phần của phần mềm hoặc phần cứng. 
+- Các metrics được sử dụng khi gom nhiều tạo thành một bản ghi dữ liệu trên một khoảng thời gian nào đó. Những dữ liệu đó được gọi là observations (quan sát và theo dõi).
+- Observations bao gồm các giá trị, timestamp(được gán nhãn thời gian). 
+- Thu thập các observations thì ta thu được time series. 
+- Các loại Metrics 
+    - Gauges: là tập hợp các con số có thể lên xuống tùy ý. Gauges là cần thiết đối với việc đối chiếu của một quá trình đo. Ví dụ với doanh nghiệp, chúng đo được số người đang sử dụng site, và đo được tại các thời điểm với các con số chính xác.
+
+![2](/image/2021-05-04_15-49-32.png)
+
+    - Counters: là tập hợp các con số hiện theo một khoảng thời gian và không bao giờ giảm. Mặc dù không giảm, nhưng chúng có thể khởi động lại từ 0 và bắt đầu tăng dần. Một ứng dụng tốt với kiểu metrics này là theo dõi lượng bytes được gửi và nhận bởi thiết bị, hoặc lượng thiết bị truy cập. Còn trong các doanh nghiệp thì kiểu metric này để đo đơn hàng trong tháng hoặc lượng đơn mà ứng dụng tiếp nhận. 
+
+![3](/image/2021-05-04_15-54-15.png)
+
+    - Histograms: Đây là kiểu dữ liệu đặc trưng cho *observations*. Đây là sự phân chia có lặp lại của dataset. Những nhóm chứa cùng một kiểu data - binning. Mỗi observations được đếm và đặt vào từng cột. Kết quả của các loại metric sẽ được chia vào theo đúng cột. 
+
+![4](/image/2021-05-04_16-00-18.png)
+
+## 4. Tổng hợp Metric
+- Để tổng hợp các giá trị metric riêng, ta thường hiển thị dưới dạng *aggregated* thu thập từ nhiều nguồn
+
+![5](/image/2021-05-04_16-09-06.png)
+
+- Averages: là phương pháp phân tích metric thực tế. Những thông số mà tất cả mọi người giám sát hoặc giám sát trang web, ứng dụng đều sử dụng. 
+
+![6](/image/2021-05-04_16-30-39.png)
+
+    - Vì đây là cách tính trung bình cộng, nên rất dễ xảy ra hiện tượng số liệu ảo, mặc dù thời gian phản ứng trong ảnh là 6.8s. Nhưng thực tế thì thường nằm trong khoảng 9s, rất chênh lệch. Nếu ta chỉ dựa vào cách tổng hợp số liệu dưới dạng trung bình cộng thì ta luôn nghĩ ứng dụng luôn thể hiện quá tốt so với dự kiến. 
+
+- Median: thường nằm giữa tại các giá trị; chính xác là khoảng 50% hoặc dưới một chút. 
+
+![7](/image/2021-05-04_16-37-33.png)
+
+    - Theo ảnh ta có thể thấy Median xử lí vấn đề tốt hơn và khá là thực tế. Phương pháp này giúp ta giảm được độ sai lệch đối với metric
+
+- Standard deviation 
+- Percentiles
+
+## 5. Phương pháp luận về giám sát.
+- Dựa theo hai nghiên cứu: 
+    - Brendan Gregg’s USE or Utilization Saturation and Errors Method, tập trung vào giám sát host-level
+    - Google’s Four Golden Signals, tập trung vào giám sát application-level 
+
+## 6. Tóm tắt, tác dụng của cảnh báo và thông báo
+- Cảnh báo và thông báo là các công cụ căn bản của hệ thống giám sát.
+- Điểm khác biệt giữa chúng là: Cảnh báo được sinh ra khi có điểm khác thường. Thông báo chuyển cảnh báo tới người quản trị qua các phương tiện truyền thông. 
+- Để xây dựng một hệ thống thông báo ta cần xác định được một vài đặc điểm như sau 
+    - Khi nào thì bật cảnh báo 
+    - Báo cáo vấn đề với ai 
+    - Báo cáo bằng phương tiện nào 
+    - Tần suất báo cáo 
+    - Khi nào dừng báo cáo, khi nào làm những tác vụ khác, hoặc chuyển tiếp tới một người khác.
+- Để tránh lâm vào việc làm phiền thì ta cần cấu hình những vấn đề cần thiết, cảnh báo tới đúng người và đúng vấn đề. 
