--- a/04. Cấu hình Prometheus.md
+++ b/04. Cấu hình Prometheus.md
@@ -1,1 +1,50 @@
 # Cấu hình Prometheus
+
+- Tham khảo và làm theo các bước trong [bài viết](https://github.com/longsube/Tim-hieu-Prometheus/blob/master/docs/Prometheus_QuangLN/02.Install-Prometheus.md)
+
+## 1. Các tham số 
+
+![1](/image/2021-05-05_15-29-52.png)
+
+#### 1.1 Global 
+- Bao gồm cấu hình để điều khiển hành vi của khối Prometheus Server. 
+- Mục đích của dòng *scrape_interval* chỉ định khoảng thời gian giữa các phiên scrape của ứng dụng hoặc dịch vụ. 
+- Giá trị này phân chia lượng dữ liệu theo phiên, được coi là giải pháp của *time_series*
+- *evaluation_interval* chỉ tần suất đánh giá theo quy tắc. Có 2 quy tắc chính là: thu thập quy tắc và cảnh báo 
+- Recording rules: Cho phép tính toán trước một cách thường xuyên có chu kỳ với các biểu thức và lưu kết quả thành dữ liệu của *time-series*
+- Alerting rules: Định nghĩa các điều kiện để đưa ra cảnh báo
+
+#### 1.2 Alerting
+- Với cấu hình mặc định, *alerting* cấu hình cảnh báo cho server. 
+- *alertmanagers* là danh sách mà mỗi Alertmanager sử dụng Prometheus server.
+- *static-configs* chỉ định Alertmanager được cài đặt thủ công.
+
+#### 1.3 Rule files
+- Danh sách file được chỉ định chứa quy tắc bản ghi (recording) hoặc quy tắc cảnh báo (alert). 
+
+#### 1.4 Scrape configuaration
+- Là khối (block) chỉ định mục tiêu mà hệ thống Prometheus sẽ cào (scrape) 
+- Một nhóm có chung mục đích sẽ được gọi là *jobs* 
+
+## 2. Các Nodes giám sát 
+- Truy cập vào [website](http://www.brendangregg.com/usemethod.html) để xác định đúng metric đang tìm.
+
+**Cài đặt Node_Exporter** done 
+- Ta có thể điều chỉnh cổng và interface bằng câu lệnh `--web.listen-address` và `--web.telemetry-path` 
+
+` $ node_exporter --web.listen-address=":9600" --web.telemetry-path="/node_metrics" `
+
+- Ta sẽ chuyển port của *node_exporter* sang port 9600 và lưu path vào thư mục *node_metrics*
+- `Node_exporter` có *textfile* collector cho phép xuất ra những metric tĩnh, rất hữu dụng cho việc lấy thông tin của node.
+- Những metric mà không thể scraped được, hoặc có nguồn gốc từ những nơi không có exporter, hoặc chúng chỉ là thông tin static. 
+- Cách làm việc: scan file trong thư viện đã được khởi tạo, giải nén string thành dạng metric của Prometheus, xuất ra để scraped. 
+
+`$ mkdir -p /var/lib/node_exporter/textfile_collector`
+- Bên cạnh textfile ta còn có systemd, ghi lại các dịch vụ và trạng thái hệ thống. Collector này thu thập nhiều metrics, nhưng không thể để systemd quản lí tất cả, chỉ nên một số dịch vụ. Systemd thu thập metric cho một số dịch vụ như: 
+    - docker.service
+    - ssh.service
+    - rsyslog.service
+
+[2](/image/2021-05-06_17-12-54.png)
+
+## 3. Nhãn (Labels)
